# nexus-spark-lib

./: .gitignore  GOLDEN_RECORD_SYNTHESIS_SPEC_EXTRACT.md  GOLDEN_RECORD_SYNTHESIS_SPEC_GUIDE.md  Makefile  README.md  demo_materialization_gate.py  pyproject.toml  run_signal_a_demo.py
.github/workflows/: ci-cd.yml
mvp/: canonical_data_model_spec.md  nexus_cdm_ground_truth_v3_classified.json
mvp/iteration 1/: NEXUS-API-Schema.html  NEXUS-CDM-Creation-Flow.md  NEXUS-Module-Responsibilities.md  NEXUS-Service-Topology.md  tenant_creation_fr.md  tenant_provisioning_fr.md
mvp/iteration 1/Core/: NEXUS-LEAD-OktaOIDC.md
mvp/iteration 1/M4/: NEXUS-M4-AirflowOrchestration.md
mvp/iteration 1/M5/: NEXUS-Plan-Platform.md
mvp/iteration 1/services/: NEXUS-SVC-cdm-mapper.md  NEXUS-SVC-m1-api.md  NEXUS-SVC-m1-worker.md  NEXUS-SVC-m2-api.md  NEXUS-SVC-m2-executor.md  NEXUS-SVC-m4-api.md  NEXUS-SVC-m4-worker.md  NEXUS-SVC-schema-profiler.md
mvp/iteration 2/: NEXUS-Iter2-Pipeline-Diagram.html  NEXUS-Iter2-SpecGuide.md
mvp/iteration 2/specs/: NEXUS-Iter2-REF-SprintPlan-v0.4.md  README.md
mvp/iteration 3/: NEXUS-Iter3-SPEC-CDMFieldRouting-v0.1.md  NEXUS-Iteration3-Specification.md
nexus_spark_lib/: __init__.py
nexus_spark_lib/_internal/: hash_utils.py  schema_utils.py
nexus_spark_lib/broadcast/: __init__.py  manager.py
nexus_spark_lib/config/: __init__.py  constants.py  settings.py  spark_config.py
nexus_spark_lib/db/: __init__.py  connection.py  decision_log.py  entity_store_presence.py  entity_store_presence_loader.py  er_broadcast_loader.py  er_index.py  er_index_lookup.py  golden_records.py  redirects.py  resolve_persist.py  survivorship_rules.py
nexus_spark_lib/errors/: __init__.py  exceptions.py
nexus_spark_lib/kafka/: __init__.py  dead_letter.py  entity_routed.py  envelope.py  reader.py  review_events.py  writer.py
nexus_spark_lib/models/: __init__.py  broadcasts.py  entity_store_presence.py  er_resolve_index.py  er_types.py  fx.py  materialization.py  raw_record.py  survivorship.py  transformed_record.py
nexus_spark_lib/observability/: __init__.py  er_trace.py  metrics.py  structured_log.py  tracing.py
nexus_spark_lib/transform/: __init__.py  pipeline.py  stage0_materialization.py  stage0_normalise.py  stage1_materialization.py  stage1_normalise.py  stage3_synthesise.py  survivorship_rebuild.py
nexus_spark_lib/util/: text_similarity.py
scripts/: benchmark_entity_resolution.py
tests/: conftest.py
tests/integration/: test_pipeline_happy_path.py
tests/unit/: test_er_index_snapshot.py  test_golden_records_db.py  test_kafka_reader.py  test_kafka_writer.py
(+82 files in other folders)
