[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-spark-lib"
version = "0.1.2"
description = "Shared Spark transformation library for the NEXUS platform pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_spark_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
